# SCU_Assistant

./: .gitignore  README.md  docker-compose.yml  start_dev.bat  start_dev.sh
backend/: .env.dev  .env.example  Dockerfile  alembic.ini  pyproject.toml  start_dev.py
backend/alembic/: env.py
backend/alembic/versions/: a3d7e8f1b204_create_deadlines_table.py  bf1ae6be0111_create_academic_cache_table.py  bff973bd71fc_create_users_table.py  c4e9f2a3b501_add_rag_and_memory_models.py  d5f2a1b3c702_create_exams_table.py  e7c3d9f4a815_add_notifications_table.py  f1a2b3c4d5e6_create_chaoxing_sessions.py
backend/gateway/: main.py
backend/gateway/auth/: dependencies.py  router.py  schemas.py  service.py
backend/gateway/middleware/: cors.py  rate_limit.py
backend/scripts/: api_proxy.py  debug_schedule_html.py  scrape_plan.py  scrape_schedule.py
backend/services/academic/: cache_service.py  jwc_client.py  router.py  schemas.py  service.py
backend/services/briefing/: router.py  service.py
backend/services/chaoxing/: client.py  crypto.py  router.py  schemas.py  service.py
backend/services/chat/: intent_router.py  router.py  schemas.py  service.py  tools.py
backend/services/deadline/: router.py  schemas.py  service.py
backend/services/memory/: router.py  service.py
backend/services/notification/: crawler.py  router.py  schemas.py  service.py
backend/services/rag/: parser.py  (+5 more)
backend/shared/: cache.py  config.py  database.py  exceptions.py  llm_client.py  models.py
backend/tests/: test_auth_router.py  test_auth_service.py  test_jwc_client.py  test_rate_limit.py
(+88 files in other folders)
