[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["gateway*", "shared*", "services*"]

[project]
name = "scu-assistant-backend"
version = "0.1.0"
description = "SCU Assistant Backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic-settings>=2.6.0",
    "redis>=5.2.0",
    "pyjwt>=2.10.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.18",
    "PyMuPDF>=1.24.0",
    "python-pptx>=1.0.0",
    "chromadb>=0.5.0",
    "tiktoken>=0.7.0",
    "cryptography>=43.0.0",
]

[project.optional-dependencies]
dev = [
    "aiosqlite>=0.20.0",
    "fakeredis>=2.21.0",
    "watchfiles>=1.0.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "pytest-cov>=6.0.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
